@@ -226,6 +226,26 @@
 
             </summary>
             <bugs>
+                <bug id="1736" tool="jira">
+                    <description>
+                        Added registry for ClassNameConflictResolutionStrategy implementations.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20061214</date>
+                </bug>
                 <bug id="1539" tool="jira">
                     <description>
                         toArray instead of loop
