@@ -69,3 +69,6 @@
 # constant definitions acceptable within a generated class file
 # default is 1000.
 #org.exolab.castor.builder.maxNumberOfConstants=1000
+
+org.exolab.castor.builder.nameConflictStrategies=\
+   org.exolab.castor.builder.WarningViaConsoleDialogClassNameConflictResolutionStrategy
